--- a/chasovnik.html
+++ b/chasovnik.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Време и Климат</title>
+    <title>Време и Климат (Голям)</title>
     <style>
         body {
             /* Тъмносин фон с лек градиент */
@@ -16,23 +16,25 @@
             height: 100vh;
             margin: 0;
             text-align: center;
+            overflow: hidden; /* Скрива скроловете, ако стане прекалено голямо */
         }
 
         .container {
             padding: 20px;
-            text-shadow: 0 4px 10px rgba(0,0,0,0.5);
+            text-shadow: 0 5px 15px rgba(0,0,0,0.5);
+            width: 100%;
         }
 
-        /* Меню за избор на град - изчистено */
+        /* Меню за избор на град - УВЕЛИЧЕНО */
         select {
-            font-size: 22px;
-            padding: 10px 30px;
-            border-radius: 30px;
-            border: 1px solid rgba(255,255,255,0.2);
+            font-size: 40px; /* Беше 22px */
+            padding: 15px 50px;
+            border-radius: 50px;
+            border: 2px solid rgba(255,255,255,0.2);
             background: rgba(0, 0, 0, 0.4);
             color: white;
             cursor: pointer;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             outline: none;
             text-align: center;
             -webkit-appearance: none;
@@ -47,35 +49,40 @@
         select option {
             background-color: #203a43;
             color: white;
+            font-size: 20px; /* Опциите по-малки, за да се събират */
         }
 
+        /* Часовник - УВЕЛИЧЕН */
         .clock {
-            font-size: 130px; /* Леко увеличен за акцент */
+            font-size: 220px; /* Беше 130px */
             font-weight: 700;
             line-height: 1;
             margin-bottom: 10px;
             font-variant-numeric: tabular-nums; 
         }
 
+        /* Дата - УВЕЛИЧЕНА */
         .date {
-            font-size: 26px;
-            margin-bottom: 50px;
+            font-size: 45px; /* Беше 26px */
+            margin-bottom: 60px;
             color: #d7d7d7;
             text-transform: uppercase;
-            letter-spacing: 3px;
+            letter-spacing: 5px;
         }
 
+        /* Температура - УВЕЛИЧЕНА */
         .temp-box {
-            font-size: 80px;
+            font-size: 140px; /* Беше 80px */
             font-weight: bold;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
+        /* Детайли - УВЕЛИЧЕНИ */
         .details {
-            font-size: 24px;
+            font-size: 42px; /* Беше 24px */
             display: flex;
             justify-content: center;
-            gap: 60px;
+            gap: 100px; /* Повече разстояние между елементите */
             color: #e5e9f0;
         }
 
@@ -83,11 +90,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 5px;
+            gap: 10px;
         }
         
         .detail-label {
-            font-size: 14px;
+            font-size: 24px; /* Беше 14px */
             opacity: 0.6;
             text-transform: uppercase;
         }
@@ -144,7 +151,6 @@
         // --- 2. СКРИТА СИНХРОНИЗАЦИЯ ---
         async function smartSync() {
             try {
-                // Опитваме да вземем време от интернет
                 const response = await fetch('https://worldtimeapi.org/api/timezone/Europe/Sofia', { 
                     cache: "no-store",
                     mode: 'cors'
@@ -157,7 +163,6 @@
                     timeOffset = serverTime - localTime;
                 }
             } catch (error) {
-                // Ако не стане - не правим нищо (оставаме на локално време), без съобщение
                 timeOffset = 0;
             }
         }
@@ -176,7 +181,7 @@
             document.getElementById('date').innerText = now.toLocaleDateString('bg-BG', options);
         }
 
-        // --- 4. ВРЕМЕТО (КЛИМАТ) ---
+        // --- 4. ВРЕМЕТО ---
         async function getWeather() {
             try {
                 const selectedCity = document.getElementById('city-select').value;
@@ -199,7 +204,7 @@
 
         // --- СТАРТИРАНЕ ---
         smartSync(); 
-        setInterval(smartSync, 600000); // Тиха синхронизация
+        setInterval(smartSync, 600000); 
 
         setInterval(updateClock, 1000); 
         updateClock(); 
